# dualkey-agent

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  release-checklist.md
.github/workflows/: ci.yml
docs/: browser-use-adapter.md  claude-code-hook.md  mcp-proxy.md  openhands-adapter.md  policy-language.md  prd-git-push-approval.md  receipt-storage.md
policy/examples/: browser-use-tests.yaml  browser-use.yaml  claude-code-tests.yaml  claude-code.yaml  dualkey-tests.yaml  dualkey.yaml  mcp-proxy-tests.yaml  mcp-proxy.yaml  openhands-tests.yaml  openhands.yaml
scripts/: claude_hook_smoke.py  mcp_proxy_smoke.py  package_smoke.py  release_gate.py  verify_smoke.py
sdk/python/src/dualkey/: __init__.py  approvals.py  browser_use_adapter.py  claude_hook.py  demo.py  engine.py  mcp_proxy.py  models.py  openhands_adapter.py  policy.py  policy_cli.py  receipts.py  replay.py  verify.py
tests/: test_browser_use_adapter.py  test_browser_use_runtime_compat.py  test_claude_hook.py  test_demo.py  test_mcp_proxy.py  test_openhands_adapter.py  test_openhands_sdk_integration.py  test_policy.py  test_receipts.py  test_release_gate.py  test_replay.py  test_verify.py
tests/fixtures/: fake_mcp_server.py
